--- a/LLTokenPaySDK/Assets/walletResources.bundle/Contents/Resources/default.css
+++ b/LLTokenPaySDK/Assets/walletResources.bundle/Contents/Resources/default.css
@@ -5,7 +5,6 @@
 
 /* 背景色样式 */
 #BG-3{background-color:#f0f0f0};
-
 /* 字体样式 */
 #TX-C{font-size:23px;}
 #TX-D{font-size:16px;}
@@ -20,8 +19,6 @@
 #TX-S{font-size:15px}
 #TX-HeadView{font-color:#333333;bg-color:#ffffff}
 
-/*#LLPay-More{support:false};*/
-
 #TX-1{font-color:#333333}
 #TX-2{font-color:#ff0000}
 #TX-3{font-color:#00a0e9} /*短信弹框确认文字颜色，购买信息价格文字颜色 #fe5000*/
@@ -33,72 +30,34 @@
 #TX-12{font-color:#555555}
 
 /* 控件样式表 */
-UIView{font-size:18px;}
-UILabel{background-color:clear;width:100px;height:15}
 
-/* textFieldBoderColorHi #fe5000*/
-UITextField{left:8px;width:304px;height:44px;border-style:none;font-color:#333333;font-size:16px;border-width:.4f;border-color:#d7d7d7;border-color-hi:#00a0e9;border-radius:0;background-color:#ffffff}
-UITextView{background-color:#00000000;width:320px;height:100px;}
-UIButton{left:10px;width:300px;height:40px;font-color:#ffffff;font-size:18px;}
-UITableView{width:320px;height:200px;}
-LLInfoView{left:14px;top:14px;width:292px;}
+UITextField{left:8px;width:304px;height:44px;border-style:none;font-color:#333333;font-size:16px;border-width:.4f;border-color:#d7d7d7;border-color-hi:#00a0e9;border-radius:5;background-color:#ffffff}
+UIButton{left:10px;width:300px;height:44px;font-color:#ffffff;font-size:18px;}
 
 NavBar {left:0px;top:0px;width:320px;height:44px;font-size:19px;font-color:#ffffff;
     font-style:bold;background-color:#ffffff;background-image:ll_nav_bg3.png;}
 
-CusTitles {payTitle:连连支付;alertTitle:连连支付}
-
-.numText{keyboard-type:num;}
-.splitLine{width:320px;height:1px;image:examSplitline.png;}
-
-.confirmBtn{type:custom;background-image:confirmBtn.png;background-image-hi:btn-hi.png;}
-.cancelBtn{type:custom;background-image:quickPaycancelBtn.png;background-image-hi:btn-hi.png;}
-
-/* form page element */
-.formInputField{font-size:18px;border-style:none;}
+CusTitles {payTitle:连连支付;signTitle:绑卡;alertTitle:连连支付;alertTitle2:绑卡;
+    alertConfirmPay:立即支付;alertConfirmBind:确认绑卡;alertUseSms:使用短信验证码支付}
 
 
-LLColorButton{border-radius:0px;}
+LLColorButton{border-radius:5px;}
 
-/*
- #a-button{normal-color:#fa3807;hi-color:#b73737;disable-color:214,214,214}
- #b-button{normal-color:#fe5000;hi-color:#6f8086;font-color:#ffffff;}
- */
 #a-button{normal-color:#00a0e9;hi-color:#017fc7;disable-color:214,214,214}
 #b-button{normal-color:#00a0e9;hi-color:#017fc7;font-color:#ffffff;}
-#c-button{normal-color:#fe932f;hi-color:#cb7320;}
-#d-button{normal-color:#dcdcdc;hi-color:#a9a9a9;}
+/*#c-button{normal-color:#fe932f;hi-color:#cb7320;}*/
+/*#d-button{normal-color:#dcdcdc;hi-color:#a9a9a9;}*/
 #e-button{normal-color:#ffeec1;hi-color:#eeeeee;border-color:#ffd778;border-width:0.8px;font-color:#fe5000;}
 #f-button{normal-color:#ffffff;hi-color:#999999;border-color:#d9d9d9;border-width:0.8px;font-color:#666666;}
-#pay-button{normal-color:#00a0e9;hi-color:#017fc7;disable-color:214,214,214;border-radius:0}
+#pay-button{normal-color:#00a0e9;hi-color:#017fc7;disable-color:214,214,214;border-radius:5}
 
 #half-button{width:128px;font-size:14px;}
 
-#sms-button-d{background-image:D短信验证码按钮.png;background-image-hi:D短信验证码按钮按压.png;background-image-disable:D短信验证码按钮不可点击.png;
-    width:99;height:44;}
-
-#confirm-short-button {
-    background-image:B弹框按钮.png;
-    background-image-hi:B弹框按钮按压.png;
-    background-image-disable:B弹框按钮按压.png;
-    width:129;
-    height:40;
-}
-
-#cancel-short-button {
-    background-image:D弹框按钮.png;
-    background-image-hi:D短信验证码按钮按压.png;
-    background-image-disable:D短信验证码按钮按压.png;
-    width:129;
-    height:40;
-    font-color:#000000;
-}
-
 /* 输入框 */
-#short-textfield{width:280px;}
-#inputVC-sms-textfield{left:8px;width:216px;height:45}
-LLSmallCountDownButton{left:216; top:0; width:88; height:44}
-#disable-textfield{user-interaction-enabled:false;background-color:221,221,221;}
+/*#short-textfield{width:280px;}*/
+#inputVC-sms-textfield{left:8px;width:216px;height:45;border-radius:5}/*短信输入框*/
+LLSmallCountDownButton{left:216; top:0; width:88; height:44;border-radius:5}
+#disable-textfield{user-interaction-enabled:false;background-color:221,221,221}
 .deadlineField{font-size:15px;date-color:#999999; word-color:#999999;}
 
 /* 页 面 样 式 */
@@ -110,18 +69,3 @@ basePage{}
 #label-tip{font-color:#999999;font-size:15px;height:44px;width:55px;}
 
 #support-tip{font-color:#666666;font-size:15px;align:center;width:300;height:44px;}
-
-/*
- #LLToast_pay{ll_goodds_info:购买%1$s元的%2$s}
- */
-
-/*
- 支付显示方式
- 分别为快捷支付，认证支付，预授权，随心付，实名快捷,
- */
-#LLPay-Style{style:quickPay} /*quickPay，verifyPay,preAuthorizePay,superPay,travelPay,realNamePay,carPay,instalmentsPay,fundPay*/
-
-
-/*去掉横屏支持*/
-/*#support-hori{support: false};*/
-
